# k8s-libsonnet

./: BUILD.bazel  MODULE.bazel
1.26/: BUILD.bazel
1.26/_custom/: BUILD.bazel
1.26/_gen/apps/: BUILD.bazel
1.26/_gen/apps/v1/: BUILD.bazel
1.26/_gen/core/: BUILD.bazel
1.26/_gen/core/v1/: BUILD.bazel
